@@ -5,6 +5,7 @@ History:
 5.0.0   2019/xx/xx
       - removed support for Python 2.7
       - MSS: improve type annotations and add CI check
+      - MSS: use __slots__ for better performances
       - Windows: use our own instances of GDI32 and User32 DLLs
       - doc: add an example using the multiprocessing module (closes #82)
 
